--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,29 @@
 *.iml
 *.iws
 
-## system files
-.DS_Store
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-## npm
-/node_modules*/
-/npm-debug.log
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+yarn.lock
+package-lock.json
+
+.npmrc
