--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
   "name": "feedback-overview-dashboard",
-  "version": "1.0.0",
-  "description": "Usabilla Frontend Developer Challenge",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pavelKozlov/feedback-overview-dashboard.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "Pavel Kozlov",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pavelKozlov/feedback-overview-dashboard/issues"
-  },
-  "homepage": "https://github.com/pavelKozlov/feedback-overview-dashboard#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
