--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +37,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+      "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+       "pre-commit": "lint-staged"
+     }
   }
 }
