--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx . --ignore-path .lintignore"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,10 +19,9 @@
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
-    "husky": "^4.2.5",
+    "eslint-plugin-react": "^7.20.3",
     "lint-staged": "^10.2.11",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.0.5"
+    "node-sass": "^4.14.1"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,15 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "lint-staged": {
-      "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-       "pre-commit": "lint-staged"
-     }
   }
 }
