--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js,.jsx . --ignore-path .lintignore"
+    "lint": "eslint --ext .js,.jsx . --ignore-path .lintignore",
+    "lint:fix": "yarn run lint --fix",
+    "lint:prettier": "prettier --write \"src/**/*.{js,jsx,json,css,scss,md}\"",
+    "format": "yarn run lint:prettier && yarn run lint:fix"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -22,8 +25,13 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "node-sass": "^4.14.1"
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +46,18 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "yarn run lint:prettier",
+      "yarn run lint:fix",
+      "git add"
     ]
   }
 }
